Refactor : 4회차 - Post, Comment (#195)
* Fix : 버그 수정

* Refactor : Post 리팩토링

* Refactor : Comment 리팩토링