@@ -1,18 +1,13 @@
 package com.mypill.domain.cart.dto.response;
 
 import com.mypill.domain.cart.entity.Cart;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
+import com.mypill.domain.cart.entity.CartProduct;
+import lombok.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Builder
-@Getter
-@AllArgsConstructor
-@NoArgsConstructor
+@Data
 public class CartResponse {
     private Long id;
     private List<CartProductResponse> cartProducts;
@@ -20,14 +15,15 @@ public class CartResponse {
     private Long totalPrice;
 
     public static CartResponse of(Cart cart) {
+        List<CartProduct> filteredProducts = cart.getCartProducts().stream()
+                .filter(cartProduct -> cartProduct.getDeleteDate() == null)
+                .toList();
+
         return CartResponse.builder()
                 .id(cart.getId())
-                .cartProducts(cart.getCartProducts().stream()
-                        .filter(cartProduct -> cartProduct.getDeleteDate() == null)
-                        .map(CartProductResponse::of)
-                        .collect(Collectors.toList()))
-                .totalQuantity(cart.getTotalQuantity())
-                .totalPrice(cart.getTotalPrice())
+                .cartProducts(filteredProducts.stream().map(CartProductResponse::of).toList())
+                .totalQuantity(filteredProducts.stream().mapToLong(CartProduct::getQuantity).sum())
+                .totalPrice(filteredProducts.stream().mapToLong(cartProduct -> cartProduct.getQuantity() * cartProduct.getProduct().getPrice()).sum())
                 .build();
     }
 }
