@@ -1,8 +1,6 @@
 package com.mypill.domain.post.repository;
 
-import com.mypill.domain.member.entity.QMember;
-import com.mypill.domain.post.dto.PostResponse;
-import com.mypill.domain.post.entity.QPost;
+import com.mypill.domain.post.dto.response.PostResponse;
 import com.querydsl.core.Tuple;
 import com.querydsl.core.types.dsl.BooleanExpression;
 import com.querydsl.jpa.impl.JPAQueryFactory;
@@ -12,7 +10,9 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static com.mypill.domain.member.entity.QMember.member;
+import static com.mypill.domain.post.entity.QPost.post;
 
 
 @RequiredArgsConstructor
@@ -21,47 +21,41 @@ public class PostRepositoryImpl implements PostRepositoryCustom {
 
     @Override
     public Page<PostResponse> findPostsWithMembers(Pageable pageable) {
-        QPost qPost = QPost.post;
-        QMember qMember = QMember.member;
-        BooleanExpression condition = qPost.deleteDate.isNull();
-        return getPostPagingResponses(pageable, qPost, qMember, condition);
+        BooleanExpression condition = post.deleteDate.isNull();
+        return getPostPagingResponses(pageable, condition);
     }
 
     public Page<PostResponse> findPostsWithMembersAndTitleContaining(String keyword, Pageable pageable) {
-        QPost qPost = QPost.post;
-        QMember qMember = QMember.member;
-        BooleanExpression condition = qPost.deleteDate.isNull()
-                .and(qPost.title.likeIgnoreCase("%" + keyword + "%"));
-        return getPostPagingResponses(pageable, qPost, qMember, condition);
+        BooleanExpression condition = post.deleteDate.isNull()
+                .and(post.title.likeIgnoreCase("%" + keyword + "%"));
+        return getPostPagingResponses(pageable, condition);
     }
 
     public Page<PostResponse> findPostsWithMembersAndContentContaining(String keyword, Pageable pageable) {
-        QPost qPost = QPost.post;
-        QMember qMember = QMember.member;
-        BooleanExpression condition = qPost.deleteDate.isNull()
-                .and(qPost.content.likeIgnoreCase("%" + keyword + "%"));
-        return getPostPagingResponses(pageable, qPost, qMember, condition);
+        BooleanExpression condition = post.deleteDate.isNull()
+                .and(post.content.likeIgnoreCase("%" + keyword + "%"));
+        return getPostPagingResponses(pageable, condition);
     }
 
-    private List<Tuple> getTuples(QPost qPost, QMember qMember, BooleanExpression condition, Pageable pageable) {
+    private List<Tuple> getTuples(BooleanExpression condition, Pageable pageable) {
         return jpaQueryFactory
-                .select(qPost, qMember)
-                .from(qPost)
-                .leftJoin(qMember).on(qPost.posterId.eq(qMember.id))
+                .select(post, member)
+                .from(post)
+                .leftJoin(member).on(post.posterId.eq(member.id))
                 .where(condition)
-                .orderBy(qPost.id.desc())
+                .orderBy(post.id.desc())
                 .offset(pageable.getOffset())
                 .limit(pageable.getPageSize())
                 .fetch();
     }
 
-    private Page<PostResponse> getPostPagingResponses(Pageable pageable, QPost qPost, QMember qMember, BooleanExpression condition) {
-        List<Tuple> tuples = getTuples(qPost, qMember, condition, pageable);
+    private Page<PostResponse> getPostPagingResponses(Pageable pageable, BooleanExpression condition) {
+        List<Tuple> tuples = getTuples(condition, pageable);
         List<PostResponse> postResponse = tuples.stream()
-                .map(tuple -> new PostResponse(tuple.get(qPost), tuple.get(qMember)))
-                .collect(Collectors.toList());
+                .map(tuple -> PostResponse.of(tuple.get(post), tuple.get(member)))
+                .toList();
         long total = jpaQueryFactory
-                .selectFrom(qPost)
+                .selectFrom(post)
                 .where(condition)
                 .fetch().size();
         return new PageImpl<>(postResponse, pageable, total);
